--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 											<div class="content">
 												<h2 class="major">Creation of bike sales Dashboard using Excel</h2>
 												<p></p>
-												<a href="https://github.com/AruljosephPrakash/Arulportfolio/blob/main/Covid%20data%20exploration%20project.sql" class="special">View Project</a>
+												<a href="https://github.com/AruljosephPrakash/Arulportfolio/blob/main/Excel%20Project%20-%20Bike%20sales%20Dashboard.xlsx" class="special">View Project</a>
 											</div>
 										</div>
 									</section>
